# libhal-esp8266

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  conanfile.py
.github/workflows/: build.yml  ci.yml  deploy.yml  presubmit.yml  take.yml
demos/: CMakeLists.txt  conanfile.py  conanfile.txt  hardware_map.hpp  lpc4078.ld  main.cpp
demos/applications/: at.cpp  at_benchmark.cpp  helper.hpp  http_get.cpp  wifi_client.alpha.cpp  wlan_client.cpp
demos/targets/: lpc4074.cpp  lpc4078.cpp  stm32f103.cpp
demos/targets/lpc4074/: initializer.cpp
demos/targets/lpc4078/: initializer.cpp
docs/captures/: esp8266_at_benchmark_http_stat200.sal  esp8266_at_benchmark_local_server.sal  esp8266_at_benchmark_output.txt
docs/example_pages/: hello_world.html
include/libesp8266/: common.hpp  esp8266.hpp  http.hpp  http_request.hpp  http_response.hpp  network.hpp  util.hpp  wifi.hpp  wifi_client.alpha.hpp  wlan_client.hpp
include/libhal-esp8266/: at.hpp  http_response.hpp  util.hpp
libesp8266/devices/: esp8266.hpp
scripts/: includes.sh  test_runner.sh
src/: at.cpp  util.hpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  main.cpp  util.test.hpp
tests/: CMakeLists.txt  at.test.cpp  conanfile.py  conanfile.txt  esp8266.test.cpp  helpers.hpp  http_request.test.cpp  http_response.test.cpp  main.test.cpp  util.test.cpp  wifi_client.alpha.test.cpp  wlan_client.test.cpp
tests/at/: socket.test.cpp  tcp_socket.test.cpp  wlan_client.test.cpp
tests/unused/at/: socket.test.cpp
(+7 files in other folders)
